@@ -1,6 +1,5 @@
-USBDEVFS_CONNECTINFO 14 0
-USBDEVFS_CONNECTINFO 15 0
-USBDEVFS_CONNECTINFO 15 0
+USBDEVFS_CONNECTINFO 0E00000000000000
+USBDEVFS_CONNECTINFO 0F00000000000000
 USBDEVFS_REAPURBNDELAY 3 2 0 0 16 16 0 10000000010002100000000001000000
  USBDEVFS_REAPURBNDELAY 3 129 0 0 512 12 0 0C0000000300012000000000
 USBDEVFS_REAPURBNDELAY 3 2 0 0 12 12 0 0C0000000100011001000000
