@@ -100,9 +100,9 @@ E: SUBSYSTEM=usb
 """);
 
   // add simple ioctl tree
-  string test_tree = """USBDEVFS_CONNECTINFO 11 0
+  string test_tree = """USBDEVFS_CONNECTINFO 0B00000000000000
 USBDEVFS_REAPURB 1 129 -1 0 4 4 0 9902AAFF
-USBDEVFS_CONNECTINFO 12 1
+USBDEVFS_CONNECTINFO 0C00000001000000
 """;
 
   string tmppath;
@@ -191,9 +191,9 @@ E: SUBSYSTEM=usb
 """);
 
   // add simple ioctl tree
-  string test_tree = """USBDEVFS_CONNECTINFO 11 0
+  string test_tree = """USBDEVFS_CONNECTINFO 0B00000000000000
 USBDEVFS_REAPURB 1 129 -1 0 4 4 0 9902AAFF
-USBDEVFS_CONNECTINFO 12 1
+USBDEVFS_CONNECTINFO 0C00000001000000
 """;
 
   string tmppath;
