@@ -10,6 +10,10 @@
 - Add example umockdev and ioctl files for a gphoto camera and an MTP capable
   mobile phone.
 - Fix building with automake 1.11.3 and Vala 0.16.
+- Generalize ioctl recording and emulation for ioctls with simple structs, i.
+  e. no pointer fields. This makes it much easier to add more ioctls in the
+  future. COMPATIBILITY BREAK: This does not work any more with recorded
+  USBDEVFS_CONNECTINFO ioctls from version 0.1.
 
 0.1 (2013-02-12)
 ----------------
